# guttrade

./: CMakeLists.txt  README.md
include/: guttrade.hpp
include/guttrade/: indicator.hpp  type.hpp
include/guttrade/detail/algorithm/: add_vectors.hpp  subtract_vectors.hpp
include/guttrade/indicator/: moving_avarage.hpp  tendencie.hpp  trend.hpp  volatility.hpp  volume.hpp
include/guttrade/indicator/moving_average/: exponential.hpp  simple.hpp
include/guttrade/indicator/tendencie/: aroon.hpp  directional_movement_index.hpp  macd.hpp  stop_and_reverse.hpp
include/guttrade/indicator/trend/: aroon.hpp  directional_indicator.hpp  directional_movement.hpp  directional_movement_index.hpp  macd.hpp  stop_and_reverse.hpp
include/guttrade/indicator/volatility/: average_true_range.hpp  bollinger_bands.hpp  true_range.hpp
include/guttrade/indicator/volume/: accumulation_distribution.hpp  chaikin_oscillator.hpp  on_balance_volume.hpp
src/indicator/moving_average/: exponential.cpp  simple.cpp
src/indicator/tendencie/: aroon.cpp  directional_movement_index.cpp  macd.cpp
src/indicator/trend/: aroon.cpp  directional_indicator.cpp  directional_movement.cpp  directional_movement_index.cpp  macd.cpp  stop_and_reverse.cpp
src/indicator/volatility/: average_true_range.cpp  bollinger_bands.cpp  true_range.cpp
src/indicator/volume/: accumulation_distribution.cpp  chaikin_oscillator.cpp  on_balance_volume.cpp
